# uv-monorepro

./: hello.py  pyproject.toml
